src/style-mfirst-refactored.css
/* ... */
#app {
    /* position: fixed; */
    top: 0;
    left: 0;
    width: 100%;
    /* visibility: hidden; */
    will-change: transform, opacity;
}

#app.loaded {
    position: static;
    /* overflow: hidden; */
}

home-page,
about-page {
    display: block;
    will-change: transform, opacity;
}

.logo {
    img {
        /* height: 3vw; */
        height: clamp(36px, 3vw, calc(var(--g-header-height) / 2));
        width: auto;
    }
}

.divider-line {
    display: flex;
    align-items: center;
}

.dynamic-section {
    background: var(--p-clr-white);
    color: var(--p-clr-black);
}

.footer-section {
    position: relative;
    min-height: 100svh;
    background: var(--p-clr-gradient-1);

    .footer-content {
        position: relative;
        padding-block: var(--g-header-height);
        /* justify-self: center; */
        /* align-self: center; */
        /* border: 1px dashed yellow; */

        .footer-cta {
            display: flex;
            flex-direction: column;
            align-items: center;
            justify-content: space-between;
            /* gap: 2em; */
            margin-bottom: 5em;
            /* border: 1px dashed yellow; */

            > * {
                flex: 1;
                flex-basis: 1px;
            }

            .footer-cta-second {
                display: flex;
                flex-direction: column;
                align-items: center;
                text-align: center;
                gap: 2em;
                /* border: 1px dashed yellow; */
            }

            @media (width > 960px) {
                flex-direction: row-reverse;
                
                .footer-cta-second {
                    align-items: start;
                    text-align: left;
                    gap: 2em;
                }

                .cgi {
                    flex: 0 1 auto;
                    justify-content: center;
                    max-width: 35vw;
                    /* border: 1px dashed yellow; */
                }

                header {
                    flex: 1 0 auto;
                }
            }
        }

        .footer-info {
            a {
                text-decoration: none;
            }
        }

        
    }
}

.footer-col {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.grid-equal-columns {
    display: grid;
    gap: var(--equal-columns-gap, 3em);

    @media (width > 760px) {
        grid-auto-flow: column;
        grid-auto-columns: 1fr;
        --equal-columns-gap: 1em;
    }
}

.grid-auto-fit {
    --auto-fit-min-col-size: 300px;
    display: grid;
    /* gap: 1rem; */
    grid-template-columns: repeat(
        auto-fit,
        minmax(min(var(--auto-fit-min-col-size), 100%), 1fr)
    );
}

.equal-columns {
    display: grid;
    gap: var(--equal-columns-gap, 1rem);
    align-items: var(--equal-columns-vertical-alignment, stretch);

    @media (width > 760px) {
        grid-auto-flow: column;
        grid-auto-columns: 1fr;
    }

    &[data-gap="large"] {
        --equal-columns-gap: 2rem;
    }

    &[data-alignment="centered"] {
        --equal-columns-vertical-alignment: center;
    }
}








/* BEM - Layout > Footer Section */
.footer-section {
    /* position: relative; */
    display: flex;
    align-items: center;
    min-height: 100svh;
    background: var(--p-clr-gradient-1);
}

.footer-section > .wrapper {
    flex: 1;
}

.footer-section__content {
    /* position: relative; */
    display: flex;
    flex-direction: column;
    gap: 5em;
    width: 100%;
    /* padding-block: var(--g-header-height); */
    /* border: 1px dashed yellow; */
}

.footer-section__cta {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    /* border: 1px dashed orange; */

    > * {
        flex: 1;
        flex-basis: 1px;
        /* border: 1px dashed red; */
    }
}

.footer-section__lead {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    gap: 2em;
    /* border: 1px dashed yellow; */
}

.footer-section__info {
    /* border: 1px dashed red; */
}

.footer-section__info-column {}

.footer-section__info-column > [role="list"] {
    color: red;
    text-decoration: none;
}


@media (width > 960px) {
    .footer-section__cta {
        flex-direction: row-reverse;
    }

    .footer-section__cta .cgi {
        flex: 0 1 auto;
        justify-content: center;
        max-width: 35vw;
        /* border: 1px dashed yellow; */
    }
    
    .footer-section__lead {
        align-items: start;
        text-align: left;
        gap: 2em;
    }

    header {
        flex: 1 0 auto;
    }
}

